--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_activity_provider">ProviderActivity</string>
     <string name="title_activity_register">Cadastro</string>
     <string name="title_activity_detalhe_contato">Detalhes do Contato</string>
+    <string name="title_activity_map">Localização do contato</string>
 </resources>
